# rust-nms

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  pyproject.toml  rust_nms.pyi  test_nms.py
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml
benches/: nms_bench.rs
benchmarks/: NMS_IMPLEMENTATIONS.md  README.md  generate_dashboard.py  history.json  reduce_coco.py  requirements.txt  run_benchmarks.py  visualize_results.py
examples/: basic_usage.py
scripts/: benchmark-compare.sh  install-hooks.sh  pre-commit
src/: lib.rs  nms_impls.rs
